Use HATEOAS links
